@@ -27,6 +27,7 @@
 17. Don't try to reduce brackets when showing album name and year.
 18. Add option to sort smart playlists by title.
 19. Change toolbar colours if palette changes.
+20. Add another qt5ct palette work-around.
 
 2.3.2
 -----
